--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -1,68 +1,69 @@
 @import url(https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap);
-body{
+
+body {
   background-color: #202020;
   color: white;
 }
 
-nav{
+nav {
   background-color: #272829;
-  
+
 }
 
-footer{
+footer {
   background-color: #272829;
 }
 
-#logo-img-navbar{
-    margin-left: 30px; 
-    width:60px;
-    height:60px;
+#logo-img-navbar {
+  margin-left: 30px;
+  width: 60px;
+  height: 60px;
 }
 
-#navbar-center{
+#navbar-center {
   font-size: 1.8rem;
 }
 
-#navbarSupportedContent{
-    margin-right: 30px;
+#navbarSupportedContent {
+  margin-right: 30px;
 }
 
-.ult-lancamentos{
-  .paginacao{
-    text-align: center;
+.ult-lancamentos {
+  text-align: center;
 }
 
+.paginacao {
   color: black;
 }
 
 /*********************************/
 
-.carousel{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 500px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    padding: 40px 400px;
-    font-family: 'DM Sans', sans-serif;
-    transition: background .4s ease-in;
-    box-sizing: border-box;
-  }
-
-input[type=radio] {
-  display:none;
+.carousel {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 400px;
+  font-family: 'DM Sans', sans-serif;
+  transition: background .4s ease-in;
+  box-sizing: border-box;
 }
 
-#img-carousel{
-    height: 443.750px;
-    width: 300px;
+input[type=radio] {
+  display: none;
+}
+
+#img-carousel {
+  height: 443.750px;
+  width: 300px;
 }
 
 .card-carousel {
-  position:absolute;
+  position: absolute;
   width: 60%;
   height: 100%;
   left: 0;
@@ -90,38 +91,44 @@ input[type=radio] {
   width: 100%;
   height: 100%;
   margin-bottom: 20px;
-  
+
 }
 
-#item-1:checked ~ .cards #movie-3, #item-2:checked ~ .cards #movie-1, #item-3:checked ~ .cards #movie-2 {
-    transform: translatex(-40%) scale(.8);
-    opacity: .4;
-    z-index: 0;
+#item-1:checked~.cards #movie-3,
+#item-2:checked~.cards #movie-1,
+#item-3:checked~.cards #movie-2 {
+  transform: translatex(-40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#item-1:checked~.cards #movie-2,
+#item-2:checked~.cards #movie-3,
+#item-3:checked~.cards #movie-1 {
+  transform: translatex(40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#item-1:checked~.cards #movie-1,
+#item-2:checked~.cards #movie-2,
+#item-3:checked~.cards #movie-3 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+
+  img {
+    box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
   }
-  
-  #item-1:checked ~ .cards #movie-2, #item-2:checked ~ .cards #movie-3, #item-3:checked ~ .cards #movie-1 {
-    transform: translatex(40%) scale(.8);
-    opacity: .4;
-    z-index: 0;
-  }
-  
-  #item-1:checked ~ .cards #movie-1, #item-2:checked ~ .cards #movie-2, #item-3:checked ~ .cards #movie-3 {
-    transform: translatex(0) scale(1);
-    opacity: 1;
-    z-index: 1;
-    
-    img {
-      box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
-    }
-  }
-  
+}
+
 /*-------------------------------------*/
 
 ul {
   list-style-type: none;
 }
 
-h1, h2, h3, h4, h5, p {
+h3 {
   font-weight: 400;
 }
 
@@ -142,14 +149,15 @@ ul {
   list-style-type: none;
 }
 
-h1, h2, h3, h4, h5, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   font-weight: 400;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
 
 a:hover {
   color: #6ABCEA;
@@ -174,6 +182,7 @@ a:hover {
   margin: 2em;
   border-radius: 10px;
   display: inline-block;
+  
 }
 
 .movie-header {
@@ -181,31 +190,23 @@ a:hover {
   margin: 0;
   height: 367px;
   width: 100%;
-  display: block;
+  display:flex;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  background-size: cover;
+  
 }
 
-.manOfSteel {
-  /*background: url("http://henrycavill.org/images/Films/2013-Man-of-Steel/posters/3-Walmart-Superman-a.jpg");*/
-  background-size: cover;
-}
-
-.babyDriver {
-  /*background: url("https://i0.wp.com/media2.slashfilm.com/slashfilm/wp/wp-content/images/baby-driver-poster.jpg");*/
-  background-size: cover;
-}
-
-.theDarkTower {
-  /*background: url("http://cdn.collider.com/wp-content/uploads/2017/03/the-dark-tower-poster.jpg");*/
-  background-size: cover;
-  background-position: 100% 100%;
-}
-
-.bladeRunner2049 {
-  /*background: url("http://cdn.collider.com/wp-content/uploads/2017/05/blade-runner-2049-poster-ryan-gosling.jpeg");*/
-  background-size: cover;
-  background-position: 100% 80%;
+.teste{
+  display:inline-block;
+ 
+  width: 100%;
+  height: 100%;
+  background: url(../images/bg.png) no-repeat top left;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100px;
 }
 
 .header-icon {
@@ -240,7 +241,8 @@ a:hover {
   margin: 0;
 }
 
-.movie-content-header, .movie-info {
+.movie-content-header,
+.movie-info {
   display: table;
   width: 100%;
 }
@@ -306,4 +308,500 @@ a:hover {
   }
 }
 
+.filmeTitle {
+  text-align: center;
+}
 
+.filmecontainer {
+  padding-left: 150px;
+}
+
+/*---------------------
+  filme Details
+-----------------------*/
+
+.filme-details {
+  padding-top: 60px;
+}
+
+.filme_details_content {
+  margin-bottom: 65px;
+}
+
+.filme_details_text {
+  position: relative;
+}
+
+.filme_details_text p {
+  color: #b7b7b7;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.filme_details_pic {
+  height: 440px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.filme_details_pic .comment {
+  font-size: 13px;
+  color: #ffffff;
+  background: #3d3d3d;
+  display: inline-block;
+  padding: 2px 10px;
+  border-radius: 4px;
+  position: absolute;
+  left: 10px;
+  bottom: 25px;
+}
+
+.filme_details_pic .view {
+  font-size: 13px;
+  color: #ffffff;
+  background: #3d3d3d;
+  display: inline-block;
+  padding: 2px 10px;
+  border-radius: 4px;
+  position: absolute;
+  right: 10px;
+  bottom: 25px;
+}
+
+.filme_details_title {
+  margin-bottom: 20px;
+}
+
+.filme_details_title h3 {
+  color: #ffffff;
+  font-weight: 700;
+  margin-bottom: 13px;
+}
+
+.filme_details_title span {
+  font-size: 15px;
+  color: #b7b7b7;
+  display: block;
+}
+
+.filme_details_widget {
+  margin-bottom: 15px;
+}
+
+.filme_details_widget ul {
+  margin-bottom: 20px;
+}
+
+.filme_details_widget ul li {
+  list-style: none;
+  font-size: 15px;
+  color: #ffffff;
+  line-height: 30px;
+  position: relative;
+  padding-left: 18px;
+}
+
+.filme_details_widget ul li:before {
+  position: absolute;
+  left: 0;
+  top: 12px;
+  height: 6px;
+  width: 6px;
+  background: #b7b7b7;
+  content: "";
+}
+
+.filme_details_widget ul li span {
+  color: #b7b7b7;
+  width: 115px;
+  display: inline-block;
+}
+
+.filme_details_btn .follow-btn {
+  font-size: 13px;
+  color: #ffffff;
+  background: #e53637;
+  display: inline-block;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 14px 20px;
+  border-radius: 4px;
+  margin-right: 11px;
+}
+
+.filme_details_btn .watch-btn span {
+  font-size: 13px;
+  color: #ffffff;
+  background: #e53637;
+  display: inline-block;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding: 14px 20px;
+  border-radius: 4px 0 0 4px;
+  margin-right: 1px;
+}
+
+.filme_details_btn .watch-btn i {
+  font-size: 20px;
+  display: inline-block;
+  background: #e53637;
+  padding: 11px 5px 16px 8px;
+  color: #ffffff;
+  border-radius: 0 4px 4px 0;
+}
+
+.filme_details_review {
+  margin-bottom: 55px;
+}
+
+.filme_review_item {
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.filme_review_item_pic {
+  float: left;
+  margin-right: 20px;
+  position: relative;
+}
+
+.filme_review_item_pic:before {
+  position: absolute;
+  right: -30px;
+  top: 15px;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #1d1e39;
+  content: "";
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.filme_review_item_pic img {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.filme_review_item_text {
+  overflow: hidden;
+  background: #1d1e39;
+  padding: 18px 30px 16px 20px;
+  border-radius: 10px;
+}
+
+.filme_review_item_text h6 {
+  color: #ffffff;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.filme_review_item_text h6 span {
+  color: #b7b7b7;
+  font-weight: 400;
+}
+
+.filme_review_item_text p {
+  color: #b7b7b7;
+  line-height: 23px;
+  margin-bottom: 0;
+}
+
+.filme_details_form form textarea {
+  width: 100%;
+  font-size: 15px;
+  color: #b7b7b7;
+  padding-left: 20px;
+  padding-top: 12px;
+  height: 110px;
+  border: none;
+  border-radius: 5px;
+  resize: none;
+  margin-bottom: 24px;
+}
+
+.filme_details_form form button {
+  font-size: 11px;
+  color: #ffffff;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  background: #e53637;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 2px;
+}
+
+/*---------------------
+  filme Watching
+-----------------------*/
+
+.filme_video_player {
+  margin-bottom: 70px;
+}
+
+.filme_video_player .plyr--video {
+  border-radius: 5px;
+  background: transparent;
+}
+
+.filme_video_player .plyr audio,
+.filme_video_player .plyr iframe,
+.filme_video_player .plyr video {
+  width: 102%;
+}
+
+.filme_video_player .plyr--full-ui.plyr--video .plyr_control--overlaid {
+  display: block;
+}
+
+.filme_video_player .plyr--video .plyr_control.plyr_tab-focus,
+.filme_video_player .plyr--video .plyr_control:hover,
+.filme_video_player .plyr--video .plyr_control[aria-expanded=true] {
+  background: transparent;
+}
+
+.filme_video_player .plyr--video .plyr_controls {
+  background: transparent;
+}
+
+.filme_video_player .plyr--video .plyr_progress_buffer {
+  color: transparent;
+}
+
+.filme_video_player .plyr--full-ui input[type=range] {
+  color: #ffffff;
+}
+
+.filme_video_player .plyr_controls .plyr_controls_item.plyr_progress_container {
+  position: absolute;
+  left: 26px;
+  bottom: 45px;
+  width: calc(100% - 60px);
+}
+
+.filme_video_player .plyr_menu {
+  margin-right: 70px;
+}
+
+.filme_video_player .plyr_controls .plyr_controls_item:first-child {
+  position: absolute;
+  left: 32px;
+  bottom: 8px;
+}
+
+.filme_video_player .plyr_controls .plyr_controls_item:last-child {
+  position: absolute;
+  right: 32px;
+  bottom: 8px;
+}
+
+.filme_video_player .plyr_volume {
+  position: absolute;
+  width: auto;
+  left: 76px;
+  bottom: 8px;
+}
+
+.filme_video_player .plyr_controls .plyr_controls_item.plyr_time {
+  position: absolute;
+  left: 106px;
+  bottom: 12px;
+}
+
+.filme_video_player .plyr_control--overlaid {
+  background: transparent;
+  background: var(--plyr-video-control-background-hover, var(--plyr-color-main, var(--plyr-color-main, transparent)));
+}
+
+.filme_video_player .plyr_control--overlaid svg {
+  height: 60px;
+  width: 50px;
+}
+
+.filme_details_episodes {
+  margin-bottom: 35px;
+}
+
+.filme_details_episodes a {
+  display: inline-block;
+  font-size: 15px;
+  color: #ffffff;
+  background: rgba(255, 255, 255, 0.2);
+  padding: 10px 20px;
+  border-radius: 4px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  -webkit-transition: all, 0.3s;
+  -o-transition: all, 0.3s;
+  transition: all, 0.3s;
+}
+
+.filme_details_episodes a:hover {
+  color: #000000;
+  background: #ffffff;
+}
+
+#trailerfilme {
+  align-items: center;
+  text-align: center;
+}
+
+#carbtn{
+  margin-right: 10px;
+}
+
+#carbtn-ico{
+  color:white; 
+  width:20px; 
+  height:20px; 
+  }
+
+.btn-outline-bg{
+  color: #a682d3;
+  background-color: transparent;
+  border-color: #a682d3;
+}
+
+.btn-outline-bg:hover{
+  color: white;
+  background-color: #a682d3;
+  border-color: #a682d3;
+}
+
+/*--------------------------------------------------------*/
+
+.form-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+}
+
+.form-holder .form-content {
+  position: relative;
+  text-align: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 60px;
+}
+
+.form-content .form-items {
+  border: 3px solid #fff;
+  padding: 40px;
+  display: inline-block;
+  width: 100%;
+  min-width: 540px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  text-align: left;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.form-content h3 {
+  color: #fff;
+  text-align: left;
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.form-content h3.form-title {
+  margin-bottom: 30px;
+}
+
+.form-content p {
+  color: #fff;
+  text-align: left;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+
+
+.form-content label, .was-validated .form-check-input:invalid~.form-check-label, .was-validated .form-check-input:valid~.form-check-label{
+  color: #fff;
+}
+
+.form-content input[type=text], .form-content input[type=password], .form-content input[type=email], .form-content select {
+  width: 100%;
+  padding: 9px 20px;
+  text-align: left;
+  border: 0;
+  outline: 0;
+  border-radius: 6px;
+  background-color: #fff;
+  font-size: 15px;
+  font-weight: 300;
+  color: #8D8D8D;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  margin-top: 16px;
+}
+
+
+.btn-comprar{
+  background-color: #6C757D;
+  outline: none;
+  border: 0px;
+  box-shadow: none;
+}
+
+.btn-comprar:hover, .btn-comprar:focus, .btn-comprar:active{
+  background-color: #495056;
+  outline: none !important;
+  border: none !important;
+   box-shadow: none;
+}
+
+.form-content textarea {
+  position: static !important;
+  width: 100%;
+  padding: 8px 20px;
+  border-radius: 6px;
+  text-align: left;
+  background-color: #fff;
+  border: 0;
+  font-size: 15px;
+  font-weight: 300;
+  color: #8D8D8D;
+  outline: none;
+  resize: none;
+  height: 120px;
+  -webkit-transition: none;
+  transition: none;
+  margin-bottom: 14px;
+}
+
+.form-content textarea:hover, .form-content textarea:focus {
+  border: 0;
+  background-color: #ebeff8;
+  color: #8D8D8D;
+}
+
+.mv-up{
+  margin-top: -9px !important;
+  margin-bottom: 8px !important;
+}
+
+.invalid-feedback{
+  color: #ff606e;
+}
+
+.valid-feedback{
+ color: #2acc80;
+}
