--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -33,7 +33,8 @@ footer {
 }
 
 .paginacao {
-  color: black;
+  margin-top: 5vh;
+  width: 100%;
 }
 
 /*********************************/
@@ -117,9 +118,7 @@ input[type=radio] {
   opacity: 1;
   z-index: 1;
 
-  img {
-    box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
-  }
+  img {box-shadow:0px 0px 5px 0px rgba(81, 81, 81, 0.47);}
 }
 
 /*-------------------------------------*/
@@ -165,36 +164,30 @@ a:hover {
 
 .container-movie {
   color: black;
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 100%;
   margin-top: 10vh;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .movie-card {
   background: #ffffff;
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 315px;
   margin: 2em;
   border-radius: 10px;
   display: inline-block;
-  
+  flex: 0 0 auto;
+  height: 400px;
+  margin-top: 10vh;
+  margin-bottom: 20vh;
 }
 
 .movie-header {
-  padding: 0;
-  margin: 0;
-  height: 367px;
+  height: 100%;
   width: 100%;
-  display:flex;
+  display: flex;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   background-size: cover;
-  
 }
 
 .teste{
@@ -228,6 +221,8 @@ a:hover {
   text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6ABCEA;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   opacity: 1;
 }
 
@@ -239,18 +234,23 @@ a:hover {
 .movie-content {
   padding: 18px 18px 24px 18px;
   margin: 0;
+  background-color: #ffffff;
+  min-height: 40%;
+  height: 200px;
+  position: relative;
 }
 
-.movie-content-header,
-.movie-info {
+.movie-content-header{
   display: table;
   width: 100%;
+  text-align: left;
 }
 
 .movie-title {
   font-size: 24px;
   margin: 0;
   display: table-cell;
+  max-width: 215px;
 }
 
 .imax-logo {
@@ -265,13 +265,18 @@ a:hover {
 }
 
 .movie-info {
-  margin-top: 1em;
+  display: table;
+  position: absolute;
+  bottom: 20px;
+  width: 80%;
+  margin-left: 10px;
 }
 
 .info-section {
   display: table-cell;
   text-transform: uppercase;
   text-align: center;
+  width: 100%;
 }
 
 .info-section:first-of-type {
