--- a/resources/css/estilos-admin.css
+++ b/resources/css/estilos-admin.css
@@ -1,6 +1,6 @@
 .bg-gradient-primary{
     background-color: #272829;
-    background-image: linear-gradient(180deg,red 10%,#202020 100%);
+    background-image: linear-gradient(180deg,#202020 10%,#272829 100%);
     background-size: cover;
 }
 
