--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -137,7 +137,7 @@ h3 {
 }
 
 #movie-style a:hover {
-  color: #6ABCEA;
+  color: #a682d3;
 }
 
 .intro {
@@ -159,7 +159,7 @@ p {
 
 
 a:hover {
-  color: #6ABCEA;
+  color: #a682d3;
 }
 
 .container-movie {
@@ -367,7 +367,7 @@ a:hover {
 
 .filme_details_title h3 {
   color: #ffffff;
-  font-weight: 700;
+  font-weight: 800;
   margin-bottom: 13px;
 }
 
