--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap);
-
 body {
   background-color: #202020;
+  background-image: linear-gradient(#202020, #303030);
   color: white;
 }
 
@@ -12,6 +12,10 @@ nav {
 
 footer {
   background-color: #272829;
+}
+
+hr {
+  margin: 0 auto;
 }
 
 #logo-img-navbar {
@@ -467,8 +471,6 @@ a:hover {
   border-top: 15px solid transparent;
   border-left: 15px solid #1d1e39;
   content: "";
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
@@ -627,8 +629,6 @@ a:hover {
   border-radius: 4px;
   margin-right: 15px;
   margin-bottom: 20px;
-  -webkit-transition: all, 0.3s;
-  -o-transition: all, 0.3s;
   transition: all, 0.3s;
 }
 
@@ -678,14 +678,8 @@ a:hover {
 .form-holder .form-content {
   position: relative;
   text-align: center;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: center;
   justify-content: center;
-  -webkit-align-items: center;
   align-items: center;
   padding: 60px;
 }
@@ -696,11 +690,8 @@ a:hover {
   display: inline-block;
   width: 100%;
   min-width: 540px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
   border-radius: 10px;
   text-align: left;
-  -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
 
@@ -741,7 +732,6 @@ a:hover {
   font-size: 15px;
   font-weight: 300;
   color: #8D8D8D;
-  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   margin-top: 16px;
 }
@@ -775,7 +765,6 @@ a:hover {
   outline: none;
   resize: none;
   height: 120px;
-  -webkit-transition: none;
   transition: none;
   margin-bottom: 14px;
 }
@@ -799,4 +788,10 @@ a:hover {
  color: #2acc80;
 }
 
+.div-center{
+    margin: 0 auto;
+    text-align: center;
+}
+
 /*********************************************/
+
