--- a/resources/css/estilos-admin.css
+++ b/resources/css/estilos-admin.css
@@ -1,9 +1,16 @@
+footer {
+    background-color: #272829;
+}
+
 .bg-gradient-primary{
     background-color: #272829;
     background-image: linear-gradient(180deg,#202020 10%,#272829 100%);
     background-size: cover;
 }
 
-footer {
-    background-color: #272829;
-}
+#logo-img-navbar {
+    margin-left: 30px;
+    width: 60px;
+    height: 60px;
+  }
+
