--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -28,10 +28,6 @@ hr {
   font-size: 1.8rem;
 }
 
-#navbarSupportedContent {
-  margin-right: 30px;
-}
-
 .ult-lancamentos {
   text-align: center;
 }
@@ -39,6 +35,11 @@ hr {
 .paginacao {
   margin-top: 5vh;
   width: 100%;
+}
+
+.navbar{
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /*********************************/
@@ -664,6 +665,18 @@ a:hover {
   border-color: #a682d3;
 }
 
+.btn-bg{
+  color: #ffffff;
+  background-color: #a682d3;
+  border-color: #a682d3;
+}
+
+.btn-bg:hover{
+  color: #a682d3;
+  background-color: #ffffff;
+  border-color: #a682d3;
+}
+
 /*--------------------------------------------------------*/
 
 .form-holder {
@@ -795,3 +808,57 @@ a:hover {
 
 /*********************************************/
 
+
+.dropbtn {
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background-color: transparent;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:#fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 20px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #212529;
+  background-color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #212529;
+  color: #fff;
+  border-color: #fff;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: transparent;
+}
