--- a/resources/css/estilos-admin.css
+++ b/resources/css/estilos-admin.css
@@ -1,83 +1,129 @@
 footer {
-    background-color: #272829;
+  background-color: #272829;
 }
 
 .bg-gradient-primary{
-    background-color: #272829;
-    background-image: linear-gradient(180deg,#202020 10%,#272829 100%);
-    background-size: cover;
+  background-color: #272829;
+  background-image: linear-gradient(180deg,#202020 10%,#272829 100%);
+  background-size: cover;
 }
 
 #logo-img-navbar {
-    margin-left: 30px;
-    width: 60px;
-    height: 60px;
-  }
+  margin-left: 30px;
+  width: 60px;
+  height: 60px;
+}
 
 .btn-outline-bg {
-    color: #a682d3;
-    background-color: transparent;
-    border-color: #a682d3;
+  color: #a682d3;
+  background-color: transparent;
+  border-color: #a682d3;
 }
 
 .btn-outline-bg:hover {
-    color: white;
-    background-color: #a682d3;
-    border-color: #a682d3;
+  color: white;
+  background-color: #a682d3;
+  border-color: #a682d3;
 }
 
 
 .dropbtn {
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    background-color: transparent;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color:#fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    border-radius: 20px;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: #212529;
-    background-color: #fff;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #212529;
-    color: #fff;
-    border-color: #fff;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
-    background-color: transparent;
-  }
-  
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background-color: transparent;
+  z-index: 3;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:#fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 20px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #212529;
+  background-color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #212529;
+  color: #fff;
+  border-color: #fff;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: transparent;
+}
+
+.icon {
+  width: 3rem;
+  height: 3rem;
+}
+
+.icon i {
+  font-size: 2.25rem;
+}
+
+.icon-shape {
+  display: inline-flex;
+  padding: 12px;
+  text-align: center;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-shape i {
+  font-size: 1.25rem;
+}
+
+
+.col,
+.col-auto,
+.col-lg-6,
+.col-xl-3,
+.col-xl-6 {
+position: relative;
+min-height: 1px;
+padding-right: 15px;
+padding-left: 15px;
+}
+
+.col {
+max-width: 100%;
+flex-basis: 0;
+flex-grow: 1;
+}
+
+.col-auto {
+width: auto;
+max-width: none;
+flex: 0 0 auto;
+}
