--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -36,6 +36,14 @@ hr {
   text-align: center;
 }
 
+.m-Vistos {
+  text-align: center;
+}
+
+.m-Sessoes {
+  text-align: center;
+}
+
 .paginacao {
   margin-top: 5vh;
   width: 100%;
@@ -124,6 +132,32 @@ input[type=radio] {
 #item-1:checked~.cards #movie-1,
 #item-2:checked~.cards #movie-2,
 #item-3:checked~.cards #movie-3 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+
+  img {box-shadow:0px 0px 5px 0px rgba(81, 81, 81, 0.47);}
+}
+
+#itemMaisVistos-1:checked~.cards #movieMaisVistos-3,
+#itemMaisVistos-2:checked~.cards #movieMaisVistos-1,
+#itemMaisVistos-3:checked~.cards #movieMaisVistos-2 {
+  transform: translatex(-40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#itemMaisVistos-1:checked~.cards #movieMaisVistos-2,
+#itemMaisVistos-2:checked~.cards #movieMaisVistos-3,
+#itemMaisVistos-3:checked~.cards #movieMaisVistos-1 {
+  transform: translatex(40%) scale(.8);
+  opacity: .4;
+  z-index: 0;
+}
+
+#itemMaisVistos-1:checked~.cards #movieMaisVistos-1,
+#itemMaisVistos-2:checked~.cards #movieMaisVistos-2,
+#itemMaisVistos-3:checked~.cards #movieMaisVistos-3 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
